--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
             <img class="container__imagem" src="img/Logo.svg" alt="Logotipo">
             <h1 class="container__titulo">
-            <b class="container__titulo--negrito">Start</b>
+            <b class="container__titulo--negrito">Saúde mental</b>
 </h1>
             <p class="container__frase">
 "Aqui, cada livro é um <i>start</i> para um novo conhecimento!"
