--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <b class="container__titulo--negrito">Saúde mental</b>
 </h1>
             <p class="container__frase">
-"Aqui, cada livro é um <i>start</i> para um novo conhecimento!"
+"seu corpo ouve tudo <i>start</i> que sua mente diz!"
 </p>
         </div>
     </header></body>
