--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <b class="container__titulo--negrito">Saúde mental</b>
 </h1>
             <p class="container__frase">
-"seu corpo ouve tudo <i>start</i> que sua mente diz!"
-</p>
+<p>"seu corpo ouve tudo <i>start</i> que sua mente diz!"</p>
         </div>
     </header></body>
 </html>
