--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             <p class="container__frase">
 <p>"seu corpo ouve tudo que sua mente diz!"</p>
         </div>
+        <div>
         <p>"A vida é bela, mas também pode ser muito cruel e difícil para algumas pessoas.</p>
         <p>Em algumas situações, por mais extremas e dessesperadoras que possam parecer,<strong>devemos manter o pulso firme e o equilíbio mental</strong>, pois esta é a melhor maneira de conseguir enxergar a luz no sim do túnel!</p>
+        </div>
     </header></body>
 </html>
