--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
                 <ul class="lista-menu">
                 <li class="lista-menu__titulo">categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">/front-end</a>
+                    <a href="#" class="lista-menu__link">prevenção</a>
                 </li>
                 <li class="lista-menu__item">
-                  <a href="#" class="lista-menu__link">infraestrutura</a>
+                  <a href="#" class="lista-menu__link">percepção</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">business</a>
-                </li>
-                <li class="lista-menu__item">
-                     <a href="#" class="lista-menu__link">Design & UX</a>
+                    <a href="#" class="lista-menu__link">tratamento</a>
                 </li>
                 </ul>
                 <img src="img/logo.svg" alt="logo da alurabooks" class="container__imagem">
