--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div>
         <p>"A vida é bela, mas também pode ser muito cruel e difícil para algumas pessoas.</p>
-        <p>Em algumas situações, por mais extremas e dessesperadoras que possam parecer,<strong>devemos manter o pulso firme e o equilíbio mental</strong>, pois esta é a melhor maneira de conseguir enxergar a luz no sim do túnel!</p>
+        <p>Em algumas situações, por mais extremas e dessesperadoras que possam parecer,<strong>devemos manter o pulso firme e o equilíbio mental</strong>, pois esta é a melhor maneira de conseguir enxergar a luz no fim do túnel!</p>
         </div>
     </header></body>
 </html>
